--- a/server/Gemfile
+++ b/server/Gemfile
@@ -2,6 +2,10 @@ source "http://rubygems.org"
 
 gemspec
 
+platforms :jruby do
+  gem 'jruby-openssl'
+end
+
 group :development do
   gem "rack-test"
   gem "minitest"
