--- a/client/Rakefile
+++ b/client/Rakefile
@@ -26,7 +26,6 @@ task 'documentation' do
   load 'lib/documentation.rb'
 end
 
-
 spec = Gem::Specification.load('deltacloud-client.gemspec')
 Gem::PackageTask.new(spec) do |pkg|
   pkg.need_tar = true
@@ -56,26 +55,8 @@ task :reinstall do
   puts %x{gem install deltacloud-client-*.gem --local}
 end
 
-desc "Setup Fixtures"
-task 'fixtures' do
-  FileUtils.rm_rf( File.dirname( __FILE__ ) + '/specs/data' )
-  FileUtils.cp_r( File.dirname( __FILE__ ) + '/specs/fixtures', File.dirname( __FILE__ ) + '/specs/data' )
-end
-
-namespace :test do
-  Rake::TestTask.new(:cmd) do |t|
-    t.libs << "tests"
-    t.test_files = FileList['tests/cmd.rb']
-    t.verbose = true
-  end
-end
-
-desc "Clean Fixtures"
-task 'fixtures:clean' do
-  FileUtils.rm_rf( File.dirname( __FILE__ ) + '/specs/data' )
-end
-
-begin
-  require 'ci/reporter/rake/rspec'
-rescue LoadError
+Rake::TestTask.new(:test) do |t|
+  t.test_files = FileList[
+    'tests/*test.rb',                     # EC2 frontend internal API tests
+  ]
 end
