--- a/tests/config.yaml
+++ b/tests/config.yaml
@@ -23,9 +23,9 @@ ec2:
     - "us-west-2"
     - "ap-southeast-1"
     - "ap-northeast-1"
-  preferred_provider: "us-east-1"
   #used for instances tests:
-  instances:
-    preferred_image: "ami-2b5fba42"
-    preferred_hwp: "m1.small"
-    preferred_realm: "us-east-1b"
+  preferred:
+    provider: "us-east-1"
+    image: "ami-2b5fba42"
+    hardware_profile: "m1.small"
+    realm: "us-east-1b"
