--- a/server/tests/drivers/ec2/fixtures/test_0001_must_throw_error_when_wrong_credentials.yml
+++ b/server/tests/drivers/ec2/fixtures/test_0001_must_throw_error_when_wrong_credentials.yml
@@ -1,57 +1,123 @@
---- 
-recorded_with: VCR 2.2.4
-http_interactions: 
-- request: 
+---
+http_interactions:
+- request:
     method: get
     uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=unknown&Action=DescribeAvailabilityZones&Signature=RKydNEtx7th3j3t9odsCkpZS6zBYc7ooilLwma/bxNk=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-30T11:05:00.000Z&Version=2010-08-31
-    body: 
-      string: ""
-    headers: 
-      Accept: 
-      - "*/*"
-      User-Agent: 
-      - ""
-  response: 
-    status: 
+    body:
+      encoding: UTF-8
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - ''
+  response:
+    status:
       code: 401
       message: Unauthorized
-    headers: 
-      Server: 
+    headers:
+      Server:
       - AmazonEC2
-      Transfer-Encoding: 
+      Transfer-Encoding:
       - chunked
-      Date: 
+      Date:
       - Mon, 30 Jul 2012 11:05:04 GMT
-    body: 
-      string: |-
-        <?xml version="1.0" encoding="UTF-8"?>
-        <Response><Errors><Error><Code>AuthFailure</Code><Message>AWS was not able to validate the provided access credentials</Message></Error></Errors><RequestID>d6332a66-1bac-4843-80e4-5bcb65fe4ff5</RequestID></Response>
+    body:
+      encoding: UTF-8
+      string: ! '<?xml version="1.0" encoding="UTF-8"?>
+
+        <Response><Errors><Error><Code>AuthFailure</Code><Message>AWS was not able
+        to validate the provided access credentials</Message></Error></Errors><RequestID>d6332a66-1bac-4843-80e4-5bcb65fe4ff5</RequestID></Response>'
     http_version: 
   recorded_at: Mon, 30 Jul 2012 11:05:00 GMT
-- request: 
+- request:
     method: get
     uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=unknown&Action=DescribeImages&Filter.1.Name=image-type&Filter.1.Value.1=machine&Owner.1=amazon&Signature=vit58ypcZUlSmYqIVpXK2/HftGjsyMVoYsjVua3hOZ4=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-30T11:05:00.000Z&Version=2010-08-31
-    body: 
-      string: ""
-    headers: 
-      User-Agent: 
-      - ""
-      Accept: 
-      - "*/*"
-  response: 
-    status: 
+    body:
+      encoding: UTF-8
+      string: ''
+    headers:
+      User-Agent:
+      - ''
+      Accept:
+      - ! '*/*'
+  response:
+    status:
       code: 401
       message: Unauthorized
-    headers: 
-      Transfer-Encoding: 
+    headers:
+      Transfer-Encoding:
       - chunked
-      Server: 
+      Server:
       - AmazonEC2
-      Date: 
+      Date:
       - Mon, 30 Jul 2012 11:05:16 GMT
-    body: 
-      string: |-
-        <?xml version="1.0" encoding="UTF-8"?>
-        <Response><Errors><Error><Code>AuthFailure</Code><Message>AWS was not able to validate the provided access credentials</Message></Error></Errors><RequestID>ee56f88b-4548-4964-92c6-5a534bb8afb0</RequestID></Response>
+    body:
+      encoding: UTF-8
+      string: ! '<?xml version="1.0" encoding="UTF-8"?>
+
+        <Response><Errors><Error><Code>AuthFailure</Code><Message>AWS was not able
+        to validate the provided access credentials</Message></Error></Errors><RequestID>ee56f88b-4548-4964-92c6-5a534bb8afb0</RequestID></Response>'
     http_version: 
   recorded_at: Mon, 30 Jul 2012 11:05:00 GMT
+- request:
+    method: get
+    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=unknown&Action=DescribeImages&Filter.1.Name=image-type&Filter.1.Value.1=machine&Owner.1=amazon&Signature=q2q1o3MFJ5zA0wSCNjIlnTCTtE9R2Dfr90+z0s7Yeq8=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-08-13T12:47:00.000Z&Version=2010-08-31
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - ''
+  response:
+    status:
+      code: 401
+      message: Unauthorized
+    headers:
+      Transfer-Encoding:
+      - chunked
+      Date:
+      - Mon, 13 Aug 2012 12:46:39 GMT
+      Server:
+      - AmazonEC2
+    body:
+      encoding: US-ASCII
+      string: ! '<?xml version="1.0" encoding="UTF-8"?>
+
+        <Response><Errors><Error><Code>AuthFailure</Code><Message>AWS was not able
+        to validate the provided access credentials</Message></Error></Errors><RequestID>bfa1a6ed-76f4-46d1-9857-d71359ed8c9d</RequestID></Response>'
+    http_version: 
+  recorded_at: Mon, 13 Aug 2012 12:47:00 GMT
+- request:
+    method: get
+    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=unknown&Action=DescribeImages&Filter.1.Name=image-type&Filter.1.Value.1=machine&Owner.1=amazon&Signature=JWBfs00rK+BBzk5fUD1Y6oR3FMzQ0umMXcpcNxPtSpw=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-08-13T13:03:00.000Z&Version=2010-08-31
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - ''
+  response:
+    status:
+      code: 401
+      message: Unauthorized
+    headers:
+      Transfer-Encoding:
+      - chunked
+      Date:
+      - Mon, 13 Aug 2012 13:03:15 GMT
+      Server:
+      - AmazonEC2
+    body:
+      encoding: US-ASCII
+      string: ! '<?xml version="1.0" encoding="UTF-8"?>
+
+        <Response><Errors><Error><Code>AuthFailure</Code><Message>AWS was not able
+        to validate the provided access credentials</Message></Error></Errors><RequestID>703a80de-c0e3-4c73-8c80-e70afcada61d</RequestID></Response>'
+    http_version: 
+  recorded_at: Mon, 13 Aug 2012 13:03:00 GMT
+recorded_with: VCR 2.2.4
